# FreeRTOS-Kernel

./: CMakeLists.txt  README-unspun.md
.github/workflows/: cmake.yml
test_cmake/: CMakeLists.txt  FreeRTOSConfig.h
